
   - Change acquisition wrappers to implement the descr get slot
     directly, thus speeding the use of the slot.

   - Collector #1233: port ZOPE_CONFIG patch from Zope 2.7 to Zope 2.8

  after Zope 2.8.1 

    Features added

      - Collector #1118: Added syntax to dtml-sqlgroup to support flexible
        generation of 'UPDATE' statements (bounty sponsored by Logicalware).

    Bugs Fixed

      - Collector #1899: fixed migration issue when using export/import for
        ZCatalog instances

      - 'ZPublisher.Test.publish' now takes a 'done_string' argument, which
        is written to standard error when the request completes (forward
        ported from Zope 2.7 branch).

      - Collector #556:  <dtml-sqlvar> now returns 'null' instead of 'None'
        for values which are None in Python (sponsored by a bounty from
        Logicalware).

      - Collector #1182: BBB Forward port fix from 2.7 branch (19 months
        ago!), reverting 'guarded_getitem' to pass the 'index' argument as
        the name to 'validate'.  This change is *not* propagated to the
        trunk, because the resolution of #1182 specifies that the reverted
        behavior (i.e., passing None for item accces) is to become the
        standard implementation as of 2.9.

      - Collector #1877: skel/Products/README.txt inappropriately copied
        from CMF.

      - Collector #1871: Applied patch to support lists with records using 
        ZTUtils.make_query()

      - AccessControl: creating a new user through "zpasswd inituser" did not
        work properly with a top-level user folder with enabled password
        encryption.

      - ZCatalog: refreshCatalog() could not be called safely from a ZEO
        client script

      - Catalog.clear(): fixed handling of _length attribute (caused import
        problems for some .zexp files e.g. Squishdot instances)

      - DateIndex now properly removes documents from both indexes if
        the value is None
